fix naming convention to improve usability and readability

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ li,
 form {
   line-height: 2;
 }
+
+fieldset {
+  width: fit-content;
+}
